--- a/portfolio-website.cabal
+++ b/portfolio-website.cabal
@@ -51,9 +51,6 @@ maintainer:         kzoltanbela@gmail.com
 category:           Web
 build-type:         Simple
 
--- Extra doc files to be distributed with the package, such as a CHANGELOG or a README.
-extra-doc-files:    CHANGELOG.md
-
 -- Extra source files to be distributed with the package, such as examples, or a tutorial module.
 -- extra-source-files:
 
@@ -75,7 +72,10 @@ executable portfolio-website
 
     -- Other library packages from which modules are imported.
     build-depends:    base ^>=4.21.0.0,
-        hakyll ^>=4.16.7.1
+        hakyll ^>=4.16.7.1,
+        hakyll-images ^>=1.3.0,
+        text,
+        string-interpolate ^>=0.3.4.0
 
     -- Directories containing source files.
     hs-source-dirs:   app
