--- a/portfolio-website.cabal
+++ b/portfolio-website.cabal
@@ -75,7 +75,8 @@ executable portfolio-website
         hakyll ^>=4.16.7.1,
         hakyll-images ^>=1.3.0,
         text,
-        string-interpolate ^>=0.3.4.0
+        string-interpolate ^>=0.3.4.0,
+        time
 
     -- Directories containing source files.
     hs-source-dirs:   app
